--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: chat_app_api_production
+  url: redis://redistogo:56882b2dc4767671c0e9a09d12d888a7@crestfish.redistogo.com:10929/
+  # channel_prefix: chat_app_api_production
